tests/expectations/compiler/mappings/variable_shadow_mapping_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EAST0372009]: variable `m` shadowed by
    --> compiler-test:7:13
     |
   7 |         let m: u8 = 1u8;
     |             ^
Error [ETYC0372117]: Expected type `u8` but type `(u8 => u8)` was found.
    --> compiler-test:8:16
     |
   8 |         return m;
     |                ^
"""]
